update error message and squash bug

--- a/templates/css/arena/index.css
+++ b/templates/css/arena/index.css
@@ -287,6 +287,7 @@ pre{
     border:1px solid rgba(0,0,0,0.1);
     margin-bottom:10px;
     font-size:0.9rem;
+    overflow:hidden;
 }
 
 em{
